# GPT2Vec

./: .gitignore  README.md  pyproject.toml  setup_vast.sh
config/: config.yaml  config_sl.yaml
config/data/: data.yaml
config/model/: model.yaml  model_sl.yaml
config/train/: train.yaml  train_sl.yaml
data/unlp-2025/: cv_split.csv
notebooks/: gemma_test.ipynb  neruk2hf.ipynb  peft_test.ipynb  test.ipynb
scripts/: train.py  train.sh  train_sl.py  wandb_to_hf.sh
sequence_labeling/ner-uk-2/: dataset.py  main.py  mdeberta.ipynb  test.ipynb  token_mdberta.ipynb  word_mdeberta.ipynb
sequence_labeling/ner-uk-2/token_utils/: metric.py
sequence_labeling/ner-uk-2/utils/: data.py  word_model.py
sequence_labeling/ner-uk-2/word_utils/: metric.py  word_model.py
sequence_labeling/unlp-2025/: bi-llama-mlm-eng.ipynb  bi-llama-mlm-ukr.ipynb  bi-llama-mntp-ukr.ipynb  bi-llama-no-pretrain.ipynb  llama.ipynb  mdeberta.ipynb
sequence_labeling/unlp-2025/gemma/: bi-gemma-mlm-eng.ipynb  bi-gemma-mlm-ukr.ipynb  bi-gemma-mntp-eng.ipynb  bi-gemma-mntp-ukr.ipynb  bi-gemma-no-pretrain.ipynb  gemma.ipynb
sequence_labeling/unlp-2025/llama/: bi-llama-mntp-eng.ipynb  bi-llama-mntp-ukr.ipynb  bi-llama-no-pretrain.ipynb
sequence_labeling/unlp-2025/utils/: data.py  metric.py  trainer.py  utils.py
src/callbacks/: callbacks.py  directionality.py  uter.py
src/datasets/: __init__.py  neruk_dataset.py
src/losses/: losses.py
src/metrics/: __init__.py  classification.py  directionality.py
src/models/: __init__.py  gemma3.py  llama.py
src/trainers/: unlp_trainer.py
(+2 files in other folders)
