[tool.poetry]
name = "gpt2vec"
version = "0.1.0"
description = "Packages for GPT2Vec"
authors = ["Ivan Havlytskyi"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "1.25.2"
pandas = "2.0.3"
torch = "^2.6.0"
matplotlib = "3.7.3"
seaborn = "0.12.2"
tqdm = "^4.66.1"
lightning = "^2.5.1"
transformers = "^4.35.0"
datasets = "^2.14.6"
ipykernel = "^6.29.5"
kaggle = "^1.5.16"
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
wandb = "^0.19.9"
bitsandbytes = "^0.42"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"