[tool.poetry]
name = "gpt2vec"
version = "0.1.0"
description = "Packages for GPT2Vec"
authors = ["Ivan Havlytskyi"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "3.10.12"
numpy = "1.26.4"
pandas = "2.2.3"
matplotlib = "3.7.5"
seaborn = "0.12.2"
tqdm = "4.67.1"
torch = "2.5.1"
lightning = "^2.5.0"
transformers = "4.47.1"
sentencepiece = "0.2.0"
datasets = "3.3.1"
peft = "0.14.0"
tiktoken = "0.9.0"
ipykernel = "5.5.6"
kaggle = "1.6.17"
hydra-core = "1.3.2"
omegaconf = "2.3.0"
wandb = "0.19.10"
evaluate = "^0.4.3"
seqeval = "^1.2.2"
bitsandbytes = "^0.45.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"